tests/invalid_ast_samples/d5d29005017d00b30bd6f192bf87b2f6406e6cd5af0c847d6df01607eb9e1017.py
from ast import Expr
from ast import Module
from ast import Set

tree = Module(body=[Expr(value=Set(elts=[]))], type_ignores=[])

# version: 3.8.16
# seed = 8492326
#
#
# Error:
#     AssertionError()
